--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "lucide-react": "^0.525.0"
+    "dotenv": "^17.2.1",
+    "lucide-react": "^0.525.0",
+    "nodemailer": "^7.0.5"
   }
 }
